# minerva

./: .beans.yml  .env.example  .gitignore  AGENTS.md  DEV-WORKFLOW.md  README.md  alembic.ini  docker-compose.yml  manifest  opencode.json  pyproject.toml
.beads/: config.yaml
.beans/: minerva-03i3--produce-layer-2-implementation-planning-for-minerv.md  minerva-0qt4--shift-project-process-from-spec-plugins-to-markdow.md  minerva-1t3x--orchestrator-real-daytona-end-to-end-verification.md  minerva-2ro3--create-reusable-agentsmd-template.md  minerva-46a2--agent-pack-loading.md  minerva-47u3--update-agentsmd-and-add-decisionsmd-maintenance-gu.md  minerva-4l8o--refactor-harvest-commands-to-tag-based-state-machi.md  minerva-5rrj--orchestrator-v0.md  minerva-6q2i--fix-project-setup-fix-eslint-errors-in-source-file.md  minerva-7euj--testing-docs.md  minerva-7t62--plan-wind-harvester-harvest-skill-packaging.md  minerva-8xca--define-openspec-change-for-orchestrator-auth-and-p.md  minerva-97zj--simplify-agents-docs-toc-and-enforce-user-decision.md  minerva-9ibz--orchestrator-real-model-provider-integration.md  minerva-a3e3--fix-project-setup-fix-bash-tool-test-lint-errors.md  minerva-ab14--clarify-status-of-latest-task-discussion.md  minerva-b6za--fix-orchestrator-v0-implement-run-api-and-executio.md  minerva-derz--daytona-sandbox-adapter.md  minerva-eegh--project-setup.md  minerva-eobw--bootstrap-repository-for-harvest-work.md  minerva-fyzv--plan-glider-documentation-system-and-templates.md  minerva-g1y9--run-model-scheduling.md  minerva-goow--tool-integration-pi-agent-core.md  minerva-gsda--implement-wind-harvester-improvements.md  minerva-ha33--sse-api.md  minerva-ith3--document-progressive-disclosure-principle.md  minerva-ki1b--move-standards-docs-into-rulebooks.md  (+24 more)
(+676 files in other folders)
