[project]
name = "picoclaw"
version = "0.1.0"
description = "Multi-tenant OSS runtime for agent packs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.35.0",
    "daytona>=0.145.0",
    "fastapi>=0.131.0",
    "httpx>=0.28.1",
    "psycopg>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
