[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "picoclaw"
version = "0.1.0"
description = "Multi-tenant OSS runtime for agent packs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.35.0",
    "daytona>=0.145.0",
    "fastapi>=0.135.0",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "psycopg>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
    "structlog>=25.0.0",
    "uvicorn>=0.41.0",
    "zstandard>=0.23.0",
]

[project.scripts]
minerva = "src.cli.main:main"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
